--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "mongodb": "^2.2.27",
     "socket.io": "^2.0.1"
   },
   "devDependencies": {
